Updated button bar snippet
Updated and renamed button bar snippet, it will no longer be used as
pure edit bar.

--- a/openinfra_core/src/main/resoures/de/btu/openinfra/backend/i18n/openinfra_de_DE.properties
+++ b/openinfra_core/src/main/resoures/de/btu/openinfra/backend/i18n/openinfra_de_DE.properties
@@ -57,6 +57,7 @@ topic.label = Themeninstanz
 
 system.label = System
 
+detail.button.label = Details
 create.button.label = Erstellen
 edit.button.label = Bearbeiten
 save.button.label = Speichern
