--- a/openinfra_core/src/main/resoures/de/btu/openinfra/backend/i18n/openinfra_en_GB.properties
+++ b/openinfra_core/src/main/resoures/de/btu/openinfra/backend/i18n/openinfra_en_GB.properties
@@ -57,6 +57,7 @@ topic.label = Topicinstance
 
 system.label = System
 
+detail.button.label = Detail
 create.button.label = Create
 edit.button.label = Edit
 save.button.label = Save
