Updated value list view
The value list view is now able to create or edit a value list.

--- a/openinfra_core/src/main/resoures/de/btu/openinfra/backend/i18n/openinfra_de_DE.properties
+++ b/openinfra_core/src/main/resoures/de/btu/openinfra/backend/i18n/openinfra_de_DE.properties
@@ -36,6 +36,7 @@ setup.geometry.label = Einstellungen&nbsp;f&uuml;r&nbsp;Geometrie
 
 project.details.label = Details&nbsp;zum&nbsp;Projekt
 topic.details.label = Details&nbsp;zum&nbsp;Thema
+valuelists.create.label = Neue&nbsp;Werteliste&nbsp;anlegen
 valuelists.details.label = Details&nbsp;zur&nbsp;Werteliste
 topiccharacteristics.details.label = Details&nbsp;zur&nbsp;Themenauspr&auml;gung
 attributetypegroups.details.label = Details&nbsp;zur&nbsp;Attributtypgruppe
