--- a/openinfra_core/src/main/resoures/de/btu/openinfra/backend/i18n/openinfra_en_GB.properties
+++ b/openinfra_core/src/main/resoures/de/btu/openinfra/backend/i18n/openinfra_en_GB.properties
@@ -30,12 +30,13 @@ description.label = Description
 visibility.label = Visibility
 datatype.label = Data type
 unit.label = Unit
-domain.label = Domain
+domain.label = Domain 
 
 setup.geometry.label = Geometry&nbsp;setup
 
 project.details.label = Details&nbsp;of&nbsp;project
 topic.details.label = Details&nbsp;of&nbsp;topic
+valuelists.create.label = Create&nbsp;a&nbsp;new&nbsp;value&nbsp;list
 valuelists.details.label = Details&nbsp;of&nbsp;value&nbsp;list
 topiccharacteristics.details.label = Details&nbsp;of&nbsp;topic&nbsp;characteristic
 attributetypegroups.details.label = Details&nbsp;of&nbsp;attribute&nbsp;type&nbsp;group
