jsp files for value lists completely reworked
All http methods for the value lists are implemented. There are still
some bugs e.g. you can not update a description if the value list never
had a description. Further more the confirm dialog is not working as
intended.

--- a/openinfra_core/src/main/resoures/de/btu/openinfra/backend/i18n/openinfra_de_DE.properties
+++ b/openinfra_core/src/main/resoures/de/btu/openinfra/backend/i18n/openinfra_de_DE.properties
@@ -58,6 +58,7 @@ topic.label = Themeninstanz
 
 system.label = System
 
+ok.button.label = Ok
 detail.button.label = Details
 create.button.label = Erstellen
 edit.button.label = Bearbeiten
@@ -81,3 +82,5 @@ searchresult.label = Fundstellen
 nosearchresult.label = Die Anfrage lieferte leider keine Ergebnisse.
 
 3dwebgis.label = 3D-WebGIS
+
+confirm.message = Soll der Eintrag wirklich gel&ouml;scht werden?
