--- a/openinfra_core/src/main/resoures/de/btu/openinfra/backend/i18n/openinfra_en_GB.properties
+++ b/openinfra_core/src/main/resoures/de/btu/openinfra/backend/i18n/openinfra_en_GB.properties
@@ -58,6 +58,7 @@ topic.label = Topicinstance
 
 system.label = System
 
+ok.button.label = Ok
 detail.button.label = Detail
 create.button.label = Create
 edit.button.label = Edit
@@ -81,3 +82,5 @@ searchresult.label = Results
 nosearchresult.label = The Request did not match to any result.
 
 3dwebgis.label = 3D-WebGIS
+
+confirm.message = Are you sure that this entry should be deleted?
