added create / update / delete for value list values
It is now possible to create, update or delete value list values.
Furthermore there were some small typo fixes in jsp files for value
lists.

--- a/openinfra_core/src/main/resoures/de/btu/openinfra/backend/i18n/openinfra_de_DE.properties
+++ b/openinfra_core/src/main/resoures/de/btu/openinfra/backend/i18n/openinfra_de_DE.properties
@@ -38,9 +38,13 @@ project.details.label = Details&nbsp;zum&nbsp;Projekt
 topic.details.label = Details&nbsp;zum&nbsp;Thema
 valuelists.create.label = Neue&nbsp;Werteliste&nbsp;anlegen
 valuelists.details.label = Details&nbsp;zur&nbsp;Werteliste
+valuelistvalues.create.label = Neuen Wert in der Werteliste anlegen
+valuelistvalues.details.label = Details zu Wertelistewerten
 topiccharacteristics.details.label = Details&nbsp;zur&nbsp;Themenauspr&auml;gung
 attributetypegroups.details.label = Details&nbsp;zur&nbsp;Attributtypgruppe
 attributetypes.details.label = Details&nbsp;zum&nbsp;Attributtyp
+association.valuelist.label = Zuordnung zur Werteliste
+visibility.label = Sichtbarkeit
 
 id.label = Id
 name.label = Name
