--- a/openinfra_core/src/main/resoures/de/btu/openinfra/backend/i18n/openinfra_en_GB.properties
+++ b/openinfra_core/src/main/resoures/de/btu/openinfra/backend/i18n/openinfra_en_GB.properties
@@ -38,9 +38,13 @@ project.details.label = Details&nbsp;of&nbsp;project
 topic.details.label = Details&nbsp;of&nbsp;topic
 valuelists.create.label = Create&nbsp;a&nbsp;new&nbsp;value&nbsp;list
 valuelists.details.label = Details&nbsp;of&nbsp;value&nbsp;list
+valuelistvalues.create.label = Create a new value list value
+valuelistvalues.details.label = Details of value list values
 topiccharacteristics.details.label = Details&nbsp;of&nbsp;topic&nbsp;characteristic
 attributetypegroups.details.label = Details&nbsp;of&nbsp;attribute&nbsp;type&nbsp;group
 attributetypes.details.label = Details&nbsp;of&nbsp;attribute&nbsp;type
+association.valuelist.label = Associated to value list
+visibility.label = Visibility
 
 id.label = Id
 name.label = Name
