changed position of export buttons

--- a/openinfra_core/src/main/resoures/de/btu/openinfra/backend/i18n/openinfra_de_DE.properties
+++ b/openinfra_core/src/main/resoures/de/btu/openinfra/backend/i18n/openinfra_de_DE.properties
@@ -3,6 +3,8 @@ menu.label = Menü
 next.label = Weiter
 previous.label = Zur&uuml;ck
 
+export.label = Exportieren als
+
 projects.label = Projekte
 edit.project.label = Projekt&nbsp;bearbeiten
 delete.project.label = Projekt&nbsp;l&ouml;schen
