--- a/openinfra_core/src/main/resoures/de/btu/openinfra/backend/i18n/openinfra_en_GB.properties
+++ b/openinfra_core/src/main/resoures/de/btu/openinfra/backend/i18n/openinfra_en_GB.properties
@@ -3,6 +3,8 @@ menu.label = Menu
 next.label = Next
 previous.label = Previous
 
+export.label = Export as
+
 projects.label = Projects
 edit.project.label = Edit&nbsp;project
 delete.project.label = Delete&nbsp;project
