fixed typo src/main/resoures -> src/main/resources

--- a/openinfra_core/src/main/resources/de/btu/openinfra/backend/i18n/openinfra_de_DE.properties
+++ b/openinfra_core/src/main/resources/de/btu/openinfra/backend/i18n/openinfra_de_DE.properties
@@ -3,7 +3,7 @@ menu.label = Menü
 next.label = Weiter
 previous.label = Zur&uuml;ck
 
-export.label = Exportieren als
+export.label = Exportieren&nbsp;als
 
 projects.label = Projekte
 edit.project.label = Projekt&nbsp;bearbeiten
