--- a/openinfra_core/src/main/resources/de/btu/openinfra/backend/i18n/openinfra_en_GB.properties
+++ b/openinfra_core/src/main/resources/de/btu/openinfra/backend/i18n/openinfra_en_GB.properties
@@ -3,7 +3,7 @@ menu.label = Menu
 next.label = Next
 previous.label = Previous
 
-export.label = Export as
+export.label = Export&nbsp;as
 
 projects.label = Projects
 edit.project.label = Edit&nbsp;project
