added snippet for sort functionality added sort functionality for value lists and topic characteristics

--- a/openinfra_core/src/main/resources/de/btu/openinfra/backend/i18n/openinfra_de_DE.properties
+++ b/openinfra_core/src/main/resources/de/btu/openinfra/backend/i18n/openinfra_de_DE.properties
@@ -34,6 +34,11 @@ datatype.label = Datentyp
 unit.label = Einheit
 domain.label = Wertebereich
 
+orderby.label = Sortieren&nbsp;nach
+sortingorder.label = Sortierreihenfolge
+ascending.label = Aufsteigend
+descending.label = Absteigend
+
 setup.geometry.label = Einstellungen&nbsp;f&uuml;r&nbsp;Geometrie
 
 project.details.label = Details&nbsp;zum&nbsp;Projekt
