--- a/openinfra_core/src/main/resources/de/btu/openinfra/backend/i18n/openinfra_en_GB.properties
+++ b/openinfra_core/src/main/resources/de/btu/openinfra/backend/i18n/openinfra_en_GB.properties
@@ -32,7 +32,12 @@ description.label = Description
 visibility.label = Visibility
 datatype.label = Data type
 unit.label = Unit
-domain.label = Domain 
+domain.label = Domain
+
+orderby.label = Order&nbsp;by
+sortingorder.label = Sorting&nbsp;order
+ascending.label = Ascending
+descending.label = Descending
 
 setup.geometry.label = Geometry&nbsp;setup
 
