added reset button for orderBy filter

--- a/openinfra_core/src/main/resources/de/btu/openinfra/backend/i18n/openinfra_de_DE.properties
+++ b/openinfra_core/src/main/resources/de/btu/openinfra/backend/i18n/openinfra_de_DE.properties
@@ -77,8 +77,10 @@ save.button.label = Speichern
 cancel.button.label = Abbrechen
 delete.button.label = L&ouml;schen
 searchbutton.label = Los
+reset.button.label = Zur&uuml;cksetzen
 searchplaceholder.label = Suche
 count.label = Anzahl
+
 
 notranslation.label = Keine&nbsp;&Uuml;bersetzung
 
