--- a/openinfra_core/src/main/resources/de/btu/openinfra/backend/i18n/openinfra_en_GB.properties
+++ b/openinfra_core/src/main/resources/de/btu/openinfra/backend/i18n/openinfra_en_GB.properties
@@ -77,6 +77,7 @@ save.button.label = Save
 cancel.button.label = Cancel
 delete.button.label = Delete
 searchbutton.label = Go
+reset.button.label = Reset
 searchplaceholder.label = Search
 count.label = Count
 
