updated reset button for filter
The reset button was separated into an own snippet. The button will now
reset the filter orderBy, sortOrder and filter.

--- a/openinfra_core/src/main/resources/de/btu/openinfra/backend/i18n/openinfra_de_DE.properties
+++ b/openinfra_core/src/main/resources/de/btu/openinfra/backend/i18n/openinfra_de_DE.properties
@@ -77,7 +77,7 @@ save.button.label = Speichern
 cancel.button.label = Abbrechen
 delete.button.label = L&ouml;schen
 searchbutton.label = Los
-reset.button.label = Zur&uuml;cksetzen
+resetfilter.button.label = Filter zur&uuml;cksetzen
 searchplaceholder.label = Suche
 count.label = Anzahl
 
