added parents view

--- a/openinfra_core/src/main/resources/de/btu/openinfra/backend/i18n/openinfra_de_DE.properties
+++ b/openinfra_core/src/main/resources/de/btu/openinfra/backend/i18n/openinfra_de_DE.properties
@@ -33,6 +33,7 @@ visibility.label = Sichtbarkeit
 datatype.label = Datentyp
 unit.label = Einheit
 domain.label = Wertebereich
+parents.label = Elterninstanzen
 
 orderby.label = Sortieren&nbsp;nach
 sortingorder.label = Sortierreihenfolge
