--- a/openinfra_core/src/main/resources/de/btu/openinfra/backend/i18n/openinfra_en_GB.properties
+++ b/openinfra_core/src/main/resources/de/btu/openinfra/backend/i18n/openinfra_en_GB.properties
@@ -33,6 +33,7 @@ visibility.label = Visibility
 datatype.label = Data type
 unit.label = Unit
 domain.label = Domain
+parents.label = Parent&nbsp;instances
 
 orderby.label = Order&nbsp;by
 sortingorder.label = Sorting&nbsp;order
