--- a/openinfra_core/src/main/resources/de/btu/openinfra/backend/i18n/openinfra_en_GB.properties
+++ b/openinfra_core/src/main/resources/de/btu/openinfra/backend/i18n/openinfra_en_GB.properties
@@ -78,7 +78,7 @@ save.button.label = Save
 cancel.button.label = Cancel
 delete.button.label = Delete
 searchbutton.label = Go
-resetfilter.button.label.button.label = Reset filter
+resetfilter.button.label = Reset filter
 searchplaceholder.label = Search
 count.label = Count
 
