Add map menu link

--- a/openinfra_core/src/main/resources/de/btu/openinfra/backend/i18n/openinfra_de_DE.properties
+++ b/openinfra_core/src/main/resources/de/btu/openinfra/backend/i18n/openinfra_de_DE.properties
@@ -95,6 +95,7 @@ datatype.unsupported = Datentyp&nbsp;wird&nbsp;nicht&nbsp;unterst&uuml;tzt
 searchresult.label = Fundstellen
 nosearchresult.label = Die Anfrage lieferte leider keine Ergebnisse.
 
+map.label = Karte
 3dwebgis.label = 3D-WebGIS
 
 confirm.message = Soll der Eintrag wirklich gel&ouml;scht werden?
