--- a/openinfra_core/src/main/resources/de/btu/openinfra/backend/i18n/openinfra_en_GB.properties
+++ b/openinfra_core/src/main/resources/de/btu/openinfra/backend/i18n/openinfra_en_GB.properties
@@ -94,6 +94,7 @@ datatype.unsupported = Unsupported&nbsp;datatype!
 searchresult.label = Results
 nosearchresult.label = The Request did not match to any result.
 
+map.label = Map
 3dwebgis.label = 3D-WebGIS
 
 confirm.message = Are you sure that this entry should be deleted?
