added logout button

--- a/openinfra_core/src/main/resources/de/btu/openinfra/backend/i18n/openinfra_de_DE.properties
+++ b/openinfra_core/src/main/resources/de/btu/openinfra/backend/i18n/openinfra_de_DE.properties
@@ -82,6 +82,7 @@ resetfilter.button.label = Filter zur&uuml;cksetzen
 searchplaceholder.label = Suche
 count.label = Anzahl
 
+logout.label = Abmelden
 
 notranslation.label = Keine&nbsp;&Uuml;bersetzung
 
