--- a/openinfra_core/src/main/resources/de/btu/openinfra/backend/i18n/openinfra_en_GB.properties
+++ b/openinfra_core/src/main/resources/de/btu/openinfra/backend/i18n/openinfra_en_GB.properties
@@ -82,6 +82,8 @@ resetfilter.button.label = Reset filter
 searchplaceholder.label = Search
 count.label = Count
 
+logout.label = Logout
+
 notranslation.label = No&nbsp;translation
 
 please.wait.label = Please&nbsp;wait.&nbsp;Loading&nbsp;objects
