added extended search

--- a/openinfra_core/src/main/resources/de/btu/openinfra/backend/i18n/openinfra_de_DE.properties
+++ b/openinfra_core/src/main/resources/de/btu/openinfra/backend/i18n/openinfra_de_DE.properties
@@ -100,3 +100,7 @@ map.label = Karte
 3dwebgis.label = 3D-WebGIS
 
 confirm.message = Soll der Eintrag wirklich gel&ouml;scht werden?
+
+search.results.label = Suchergebnisse
+search.extended.label = Erweiterte Suche
+search.statistics = Ihre Suche ergab {0} Treffer und dauerte {1} Sekunden.
