--- a/openinfra_core/src/main/resources/de/btu/openinfra/backend/i18n/openinfra_en_GB.properties
+++ b/openinfra_core/src/main/resources/de/btu/openinfra/backend/i18n/openinfra_en_GB.properties
@@ -100,3 +100,7 @@ map.label = Map
 3dwebgis.label = 3D-WebGIS
 
 confirm.message = Are you sure that this entry should be deleted?
+
+search.results.label = Search results
+search.extended.label = Extended Search
+search.statistics = The search request returns {0} hits and lasts {1} seconds.
